Update dependencies, switch to shading bStats from maven, etc