@@ -1,8 +1,10 @@
 package com.cjburkey.claimchunk.update;
 
+import com.cjburkey.claimchunk.Utils;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
@@ -11,6 +13,7 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.Comparator;
 
 // A not-too-flexible GitHub update checker designed by yours truly!
@@ -20,48 +23,61 @@ public class UpdateChecker {
 
     private static Gson gson;
 
-    private static String getRequest(URL url)
+    private static String getRequest(URI uri)
             throws URISyntaxException, InterruptedException, IOException {
         // Create the HTTP connection handler (basically?)
-        HttpClient client =
+        try (HttpClient client =
                 HttpClient.newBuilder()
                         .version(HttpClient.Version.HTTP_1_1)
                         .followRedirects(HttpClient.Redirect.NORMAL)
                         .connectTimeout(Duration.ofSeconds(10))
-                        .build();
-        // Create the request we're going to send
-        HttpRequest request = HttpRequest.newBuilder().uri(url.toURI()).GET().build();
-        // Send the request using our client
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.body() == null) {
-            throw new NullPointerException("Response to update check body is null");
+                        .build()) {
+            // Create the request we're going to send
+            HttpRequest request = HttpRequest.newBuilder().uri(uri).GET().build();
+            // Send the request using our client
+            HttpResponse<String> response =
+                    client.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.body() == null) {
+                throw new NullPointerException("Response to update check body is null");
+            }
+            return response.body();
         }
-        return response.body();
     }
 
-    private static GithubRelease[] getRepoReleases(URL url)
+    private static GithubRelease[] getRepoTags(URI uri)
             throws URISyntaxException, InterruptedException, IOException {
-        String rawJson = getRequest(url);
+        String rawJson = getRequest(uri);
         return getGson().fromJson(rawJson, GithubRelease[].class);
     }
 
-    private static GithubRelease[] getRepoReleases(String url)
+    private static GithubRelease[] getRepoTags(String uri)
             throws URISyntaxException, InterruptedException, IOException {
-        return getRepoReleases(new URL(url));
+        return getRepoTags(URI.create(uri));
     }
 
-    private static GithubRelease[] getRepoReleases(String repoOwner, String repoName)
+    private static GithubRelease[] getRepoTags(String repoOwner, String repoName)
             throws URISyntaxException, InterruptedException, IOException {
-        return getRepoReleases(
-                String.format("https://api.github.com/repos/%s/%s/releases", repoOwner, repoName));
+        return getRepoTags(
+                String.format("https://api.github.com/repos/%s/%s/tags", repoOwner, repoName));
     }
 
     @SuppressWarnings("SameParameterValue")
     public static SemVer getLatestRelease(String repoOwner, String repoName)
             throws URISyntaxException, InterruptedException, IOException {
-        GithubRelease[] tags = getRepoReleases(repoOwner, repoName);
-        if (tags.length == 0) return null;
-        return tags[tags.length - 1].semVer;
+        int attempts = 0;
+
+        do {
+            var tag =
+                    Arrays.stream(getRepoTags(repoOwner, repoName)).max(Comparator.naturalOrder());
+            if (tag.isPresent()) {
+                return tag.get().getSemVer();
+            }
+            Utils.warn("No release tags returned from GitHub? Trying again...");
+            attempts++;
+        } while (attempts < 3);
+
+        throw new RuntimeException(
+                "No GitHub releases showing up from API call after 3 attempts! I give up :shrug:");
     }
 
     private static Gson getGson() {
@@ -76,16 +92,17 @@ public class UpdateChecker {
         private String name = null;
 
         // Lazily initialized
-        private SemVer semVer;
+        private transient SemVer semVer;
 
         // Gets the semantic version for this release
-        private SemVer getSemVer() {
-            try {
-                if (semVer == null && name != null) {
+        private @NotNull SemVer getSemVer() {
+            if (name == null) throw new RuntimeException("GitHub release name was null?");
+            if (semVer == null) {
+                try {
                     semVer = SemVer.fromString(name);
+                } catch (Exception e) {
+                    throw new RuntimeException("Failed to parse version from GitHub release", e);
                 }
-            } catch (Exception e) {
-                e.printStackTrace();
             }
             return semVer;
         }
@@ -95,6 +112,7 @@ public class UpdateChecker {
             try {
                 return getSemVer().toString();
             } catch (Exception e) {
+                //noinspection CallToPrintStackTrace
                 e.printStackTrace();
             }
             return name;
@@ -108,17 +126,10 @@ public class UpdateChecker {
             try {
                 return getSemVer().compareTo(o.getSemVer());
             } catch (Exception e) {
+                //noinspection CallToPrintStackTrace
                 e.printStackTrace();
             }
             return 0;
-        }
-    }
-
-    private static class GithubTagComparator implements Comparator<GithubRelease> {
-
-        @Override
-        public int compare(GithubRelease o1, GithubRelease o2) {
-            return o1.compareTo(o2);
         }
     }
 }
